# Control

./: .gitignore  .gitmodules  Gopkg.toml  LICENSE  Makefile  README.md  VERSION  go.mod  go.sum  minimesosFile  mkdocs-dev.yml  mkdocs.yml  o2-aliecs-shmcleaner
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: control.yml  linkspector.yml
apricot/: README.md  apricot.go  client.go  config.go  instance.go  server.go  signals.go
apricot/cacheproxy/: service.go
apricot/doc/: apricot.md  apricot_http_service.md
apricot/docs/: apricot.md  apricot_http_service.md  docs.go  swagger.json  swagger.yaml
apricot/local/: jsontypes.go  local_test.go  service.go  service_test.go  service_test.yaml  servicehttp.go  servicehttp_test.go  servicehttp_test.yaml  serviceutil.go
apricot/protos/: apricot.pb.go  apricot.proto  apricot_grpc.pb.go
apricot/remote/: client.go  remoteutil.go  server.go  service.go
chili/: chili.go  config.go  signals.go
chili/api/: server.go
chili/protos/: chili.pb.go  chili.proto  chili_grpc.pb.go  events.pb.go
cmd/: o2-aliecs-shmcleaner
cmd/coconut/: main.go
cmd/o2-aliecs-core/: main.go
cmd/o2-aliecs-executor/: main.go
cmd/o2-aliecs-odc-shim/: main.go
cmd/o2-apricot/: main.go
cmd/o2-chili/: main.go
cmd/o2control-core/: main.go
cmd/o2control-executor/: main.go
cmd/octl-executor/: debug.go  main.go
cmd/octld/: main.go
cmd/peanut/: main.go
cmd/walnut/: main.go
coconut/: README.md  client.go
coconut/app/: constants.go
coconut/cmd/: about.go  configuration.go  configuration_dump.go  configuration_history.go  configuration_import.go  configuration_list.go  configuration_show.go  environment.go  environment_autorun.go  environment_control.go  environment_create.go  environment_destroy.go  environment_list.go  environment_modify.go  environment_setname.go  environment_show.go  environment_subscribe.go  info.go  repo.go  repo_add.go  repo_default.go  repo_default_branch.go  repo_default_revision.go  repo_list.go  repo_refresh.go  repo_remove.go  role.go  role_list.go  role_query.go  root.go  task.go  task_clean.go  task_list.go  template.go  template_list.go
coconut/configuration/: configuration.go  configurationutil.go
coconut/control/: control.go  controlutil.go
coconut/doc/: coconut.md  coconut_about.md  coconut_configuration.md  coconut_configuration_dump.md  coconut_configuration_history.md  coconut_configuration_import.md  coconut_configuration_list.md  coconut_configuration_show.md  coconut_environment.md  coconut_environment_control.md  coconut_environment_create.md  coconut_environment_destroy.md  coconut_environment_list.md  coconut_environment_show.md  coconut_info.md  coconut_repository.md  coconut_repository_add.md  coconut_repository_default-revision.md  coconut_repository_default.md  coconut_repository_list.md  coconut_repository_refresh.md  coconut_repository_remove.md  coconut_role.md  coconut_role_query.md  (+6 more)
common/: cmdinfo.go  doc.go  labels.go  taskcmdinfo.go
configuration/: conf_test.go  configuration.go  configuration_suite_test.go  configuration_test.go  configuration_test.yaml  configurationmap.go  consulconfiguration.go  consulsource.go  instance.go  service.go  serviceutil.go  source.go  source_test.go  yamlconfiguration.go  yamlsource.go
control-operator/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  exampletask-test.yaml  exampletask.yaml  go.mod  go.sum
core/: config.go  core.go  envutil.go  forever.go  globalstate.go  match.go  metrics.go  scheduler.go  server.go  servertypes.go  serverutil.go  signals.go  state.go  streamutil.go  util.go
docs/: CONTRIBUTING.md  apidocs_aliecs.md  apidocs_apricot.md  apidocs_occ.md  building.md  development.md  k3s_observability.md  kafka.md  kubernetes_ecs.md  makefile_reference.md  metrics.md  running.md  running_docker.md  using_grpcc_occ.md
executor/: actions.go  client.go  debug.go  eventloop.go  executor.go  handlers.go  main.go
fpctl/: README.md
hacking/: BUILDING.md  COG.md  DCOS.md  MINIMESOS.md  RUNNING.md  VagrantConfig.yaml  aliZsync  aliZsync-sync-zfs-snapshots.py  alizsw  config.yaml  coreconfig.yaml  example-config.yaml  fx3-copy-executors  grpcc.sh  inventory  k8s-native-tasks.md  newcontainer.sh  peanut-example.yaml  release_notes.sh  run.sh  settings-mac.yaml  settings.yaml  settings.yaml.example  test.sh  testings.yaml
kaki/: CMakeLists.txt
kaki/protos/: CMakeLists.txt  test.proto
kaki/src/: CMakeLists.txt  main.cpp
kaki/src/app/: main.cpp
kaki/src/lib/: consumer.cpp  consumer.hpp
kaki/test/: CMakeLists.txt  mainTest.cpp  proto.cpp  second.cpp  simpleConsume.cpp
minimesos/: minimesosFile
occ/: CMakeLists.txt  OccGlobals.h  OccVersion.h.in  README.md
occ/cmake/: OccConfig.cmake  OccConfig.cmake.in
occ/cmake/modules/: FindGRPC.cmake
occ/occlib/: OccInstance.cxx  OccInstance.h  OccServer.cxx  OccServer.h  OccState.cxx  OccState.h  RuntimeControlledObject.cxx  RuntimeControlledObject.h  RuntimeControlledObjectPrivate.h
occ/occlib/examples/: CMakeLists.txt
occ/occlib/examples/dummy-process/: CMakeLists.txt  CMakeLists.txt.example  ControlledStateMachine.cxx  ControlledStateMachine.h  README.md  main.cxx
occ/peanut/: README.md  cli.go  peanut.go
occ/peanut/flatten/: flatten.go
occ/plugin/: OccFMQCommon.cxx  OccFMQCommon.h  OccLiteServer.cxx  OccLiteServer.h  OccPlugin.cxx  OccPlugin.h  OccPluginServer.cxx  OccPluginServer.h
occ/plugin/litestructs/: EventStream.cxx  EventStream.h  GetState.cxx  GetState.h  JsonMessage.cxx  JsonMessage.h  Transition.cxx  Transition.h
occ/protos/: CMakeLists.txt  occ.proto
occ/util/: Common.h  Logger.h
occplugin/: CMakeLists.txt  OccPlugin.h  OccPluginServer.cxx  OccPluginServer.h  OccPluginVersion.h.in
occplugin/cmake/: CMakeVersionSource.cmake
occplugin/cmake/modules/: FindGRPC.cmake
occplugin/protos/: OccPlugin.proto
occplugin/util/: Logger.h
odcshim/: odcshim.go
operator/: Makefile  PROJECT  exampletask.yaml  go.mod  go.sum
scheduler/: main.go
src/: fpctl  fpctl.py
walnut/: README.md  includeschemata.go  main.go
(+554 files in other folders)
